<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:id="@+id/appBar"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="77dp"
            android:layout_height="74dp"
            android:src="@drawable/image_logo" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textSize="40dp"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:layout_editor_absoluteX="149dp"
            tools:layout_editor_absoluteY="190dp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="30dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/log_in"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>