<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ViewFlipper
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            app:error_image="@color/purple_700"
            app:layout_constraintBottom_toTopOf="@+id/title_path_review"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <TextView
            android:id="@+id/title_path_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/difficult_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/difficulty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_to_compilation_button" />

        <TextView
            android:id="@+id/difficult_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/difficult_label"
            app:layout_constraintTop_toBottomOf="@+id/difficult_label" />


        <TextView
            android:id="@+id/duration_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:text="@string/duration"
            app:layout_constraintBottom_toBottomOf="@+id/difficult_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/difficult_label" />

        <TextView
            android:id="@+id/duration_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/duration_label"
            app:layout_constraintTop_toBottomOf="@+id/duration_label" />

        <TextView
            android:id="@+id/start_point_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/start_point"
            app:layout_constraintStart_toStartOf="@+id/difficult_text"
            app:layout_constraintTop_toBottomOf="@+id/difficult_text" />

        <TextView
            android:id="@+id/start_point_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_point"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/start_point_label"
            app:layout_constraintTop_toBottomOf="@+id/start_point_label" />


        <TextView
            android:id="@+id/nazione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/start_point_text"
            app:layout_constraintTop_toBottomOf="@+id/start_point_text"
            android:text="@string/nazione"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/nazione_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nazione"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/nazione"
            app:layout_constraintTop_toBottomOf="@+id/nazione" />


        <TextView
            android:id="@+id/regione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regione"
            app:layout_constraintTop_toBottomOf="@+id/nazione_text"
            app:layout_constraintStart_toStartOf="@id/nazione_text"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/regione_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regione"
            app:layout_constraintTop_toBottomOf="@id/regione"
            app:layout_constraintStart_toStartOf="@+id/regione"
            android:textSize="20dp"
            android:textStyle="bold"/>





        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/accessible"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_baseline_accessible_24"
            app:civ_border_color="@color/pale_blue"
            app:civ_border_width="2dp"
            app:civ_circle_background_color="@color/dark_green"
            app:layout_constraintStart_toStartOf="@+id/duration_text"
            app:layout_constraintTop_toBottomOf="@+id/start_point_text" />


        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/start_point_text"
            app:layout_constraintTop_toBottomOf="@+id/regione_text"
            android:layout_marginTop="20dp"/>


        <TextView
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_green"
            android:text="@string/lorem_ipsus"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@+id/description_label"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/open_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/yellow"
            android:text="Open the map"
            android:textColor="@color/dark_green"
            app:cornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="@+id/description_text"
            app:layout_constraintStart_toStartOf="@+id/description_text"
            app:layout_constraintTop_toBottomOf="@+id/description_text" />

        <TextView
            android:id="@+id/review_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/account_reviews"
            android:textSize="27dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/open_map"
            app:layout_constraintTop_toBottomOf="@+id/open_map" />

        <TextView
            android:id="@+id/review_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="(2)"
            app:layout_constraintBottom_toBottomOf="@+id/review_text"
            app:layout_constraintLeft_toRightOf="@+id/review_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/write_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:backgroundTint="@color/pink"
            android:text="@string/write_review"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/review_text"
            app:layout_constraintLeft_toRightOf="@+id/review_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/review_text" />

        <LinearLayout
            android:id="@+id/linearLayout_stars"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/review_text">

            <ProgressBar
                android:id="@+id/progress_bar_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_stars" />

        <ProgressBar
            android:id="@+id/progress_bar_photos"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/slider"
            app:layout_constraintEnd_toEndOf="@+id/slider"
            app:layout_constraintStart_toStartOf="@+id/slider"
            app:layout_constraintTop_toTopOf="@+id/slider" />

        <Button
            android:id="@+id/add_to_compilation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/pale_blue"
            android:text="Add to Compilation"
            app:layout_constraintEnd_toEndOf="@+id/add_sights_button"
            app:layout_constraintStart_toStartOf="@+id/add_sights_button"
            app:layout_constraintTop_toBottomOf="@+id/add_sights_button" />

        <Button
            android:id="@+id/add_sights_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/pale_blue"
            android:text="Add Sights"
            app:layout_constraintEnd_toEndOf="@+id/title_path_review"
            app:layout_constraintStart_toStartOf="@+id/title_path_review"
            app:layout_constraintTop_toBottomOf="@+id/title_path_review" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>